--- a/index.html
+++ b/index.html
@@ -7,3 +7,12 @@
   <p>Esto es el ejemplo básico de una página web</p>
 </body>
 </html>
+esto es una línea<br>
+esto es otra línea <b>bold</b> word.<br>
+<em>Emphasis</em> es la  etiqueta para itálicas.
+<p>asdgfjhlzcbvxerwy</p>
+<div>esto es una división</div>
+<img src="transparent.png" width=200">algo</img>
+<p>Los enlaces son con <code>a</code></p>
+Suelen llevar el parámetro <b>href</b>.</p>
+<a href="README.md">Pincha aquí</a>
