--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <header>
-  Página web de ejemplo
+  <link href="css/estilos.css" rel="stylesheet">
 </header>
 <body>
-  <h>Welcome</h>
+  <h1>Welcome</h1>
   <p>Esto es el ejemplo básico de una página web</p>
-</body>
-</html>
-esto es una línea<br>
+
+
+<p>esto es una línea<br></p>
 esto es otra línea <b>bold</b> word.<br>
 <em>Emphasis</em> es la  etiqueta para itálicas.
 <p>asdgfjhlzcbvxerwy</p>
@@ -16,3 +16,5 @@ esto es otra línea <b>bold</b> word.<br>
 <p>Los enlaces son con <code>a</code></p>
 Suelen llevar el parámetro <b>href</b>.</p>
 <a href="README.md">Pincha aquí</a>
+</body>
+</html>
