--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
 <body>
   <h1>Welcome</h1>
   <p>Esto es el ejemplo básico de una página web</p>
-
-
-<p>esto es una línea<br></p>
-esto es otra línea <b>bold</b> word.<br>
-<em>Emphasis</em> es la  etiqueta para itálicas.
-<p>asdgfjhlzcbvxerwy</p>
-<div>esto es una división</div>
-<img src="transparent.png" width=200">algo</img>
-<p>Los enlaces son con <code>a</code></p>
-Suelen llevar el parámetro <b>href</b>.</p>
-<a href="README.md">Pincha aquí</a>
-<p>Este es el parrafo</p>
+  <p>esto es una línea<br></p>
+   esto es otra línea <b>bold</b> word.<br>
+  <em>Emphasis</em> es la  etiqueta para itálicas.
+  <p>asdgfjhlzcbvxerwy</p>
+  <div>esto es una división</div>
+  <img src="transparent.png" width=200">algo</img>
+  <p>Los enlaces son con <code>a</code>
+   Suelen llevar el parámetro <b>href</b>.</p>
+  <a href="README.md">Pincha aquí</a>
+  <p>Este es el parrafo</p>
 </body>
 </html>
