--- a/dos.html
+++ b/dos.html
@@ -4,5 +4,7 @@
         rel="stylesheet"
         type="text/css">
     </head>
-    <body></body>
+    <body>
+        <p>Esta va a ser la segunda página</p>
+    </body>
 </html>
