--- a/dos.html
+++ b/dos.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <p>Esta va a ser la segunda página</p>
+        <div>
+             <a href="index.html">Volver</a>
+        </div>
+        <div>
+            <a href="dos.html">Página 2</a>
     </body>
 </html>
