--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <header>
-  <link href="css/estilos.css" rel="stylesheet">
+  <link href="css/estilos.css" 
+  rel="stylesheet"
+  type="text/css">
 </header>
 <body>
   <h1>Welcome</h1>
@@ -15,5 +17,6 @@
    Suelen llevar el parámetro <b>href</b>.</p>
   <a href="README.md">Pincha aquí</a>
   <p>Este es el parrafo</p>
+  <a href="dos.html">Página 2</a>
 </body>
 </html>
