--- a/dos.html
+++ b/dos.html
@@ -5,7 +5,8 @@
         type="text/css">
     </head>
     <body>
-        <p>Esta va a ser la segunda página</p>
+        <h1>El cyberbullying escolar</h1>
+        <p>El cyberbullying escolar causa las siguientes daña la autoestima y la capacidad de los menores para relacionarse entre sí, y en casos extremos puede conducirlos a una depresión.</p>
         <div>
              <a href="index.html">Volver</a>
         </div>
