--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
   type="text/css">
 </header>
 <body>
-  <h1>Welcome</h1>
-  <p>Esto es el ejemplo básico de una página web</p>
+  <h1>El Cyberbullying Escolar</h1>
+  <p>El cyberbullying escolar significa la persuasion física y/o psicológica a través de las redes que realiza un estudiante contra otro de forma negativa, continua e intencionada.</p>
   <p>esto es una línea<br></p>
-   esto es otra línea <b>bold</b> word.<br>
+   Se puede evitar:   
+  1.Motivar a los alumnos para que denuncien casos de ciberacoso. Fomentando la reflexión y haciéndoles ver que pueden ayudar a alguien.
+  2.Tratar en el aula el tema del buen uso de Internet.
+  3.Implementar programas de habilidades sociales, desarrollo personal y moral.
+  4.Establecer un diálogo con ellos.
+  5.Realizar análisis de potenciales riesgos en Internet.
+  6.Analizar los usos que hacen de Internet.
+  7.Tratar el tema del ciberbullying en clase.
+  8.Promover la comunicación entre padres y colegio.
+  9.Fortalecer su autoestima y autoconfianza.
+  10.Valorar sus cambios por muy pequeños que sean. <b>bold</b> word.<br>
   <em>Emphasis</em> es la  etiqueta para itálicas.
   <p>asdgfjhlzcbvxerwy</p>
   <div>esto es una división</div>
