--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <body>
   <h1>El Cyberbullying Escolar</h1>
   <p>El cyberbullying escolar significa la persuasion física y/o psicológica a través de las redes que realiza un estudiante contra otro de forma negativa, continua e intencionada.</p>
-  <p>esto es una línea<br></p>
    Se puede evitar:   
   1.Motivar a los alumnos para que denuncien casos de ciberacoso. Fomentando la reflexión y haciéndoles ver que pueden ayudar a alguien.
   2.Tratar en el aula el tema del buen uso de Internet.
@@ -18,15 +17,10 @@
   7.Tratar el tema del ciberbullying en clase.
   8.Promover la comunicación entre padres y colegio.
   9.Fortalecer su autoestima y autoconfianza.
-  10.Valorar sus cambios por muy pequeños que sean. <b>bold</b> word.<br>
-  <em>Emphasis</em> es la  etiqueta para itálicas.
-  <p>asdgfjhlzcbvxerwy</p>
-  <div>esto es una división</div>
-  <img src="transparent.png" width=200">algo</img>
-  <p>Los enlaces son con <code>a</code>
-   Suelen llevar el parámetro <b>href</b>.</p>
-  <a href="README.md">Pincha aquí</a>
-  <p>Este es el parrafo</p>
-  <a href="dos.html">Página 2</a>
+  10.Valorar sus cambios por muy pequeños que sean.
+  
+  <div>
+    <a href="dos.html">El cyberbullying</a>
+  </div>
 </body>
 </html>
