--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   <h1>El Cyberbullying Escolar</h1>
   <p>El cyberbullying escolar significa la persuasion física y/o psicológica a través de las redes que realiza un estudiante contra otro de forma negativa, continua e intencionada.</p>
    Se puede evitar:   
-  1.Motivar a los alumnos para que denuncien casos de ciberacoso. Fomentando la reflexión y haciéndoles ver que pueden ayudar a alguien.
-  2.Tratar en el aula el tema del buen uso de Internet.
-  3.Implementar programas de habilidades sociales, desarrollo personal y moral.
-  4.Establecer un diálogo con ellos.
-  5.Realizar análisis de potenciales riesgos en Internet.
-  6.Analizar los usos que hacen de Internet.
-  7.Tratar el tema del ciberbullying en clase.
-  8.Promover la comunicación entre padres y colegio.
-  9.Fortalecer su autoestima y autoconfianza.
-  10.Valorar sus cambios por muy pequeños que sean.
+  <p>1.Motivar a los alumnos para que denuncien casos de ciberacoso. Fomentando la reflexión y haciéndoles ver que pueden ayudar a alguien.</p>
+  <p>2.Tratar en el aula el tema del buen uso de Internet.</p>
+  <p>3.Implementar programas de habilidades sociales, desarrollo personal y moral.</p>
+  <p>4.Establecer un diálogo con ellos.</p>
+  <p>5.Realizar análisis de potenciales riesgos en Internet.</p>
+  <p>6.Analizar los usos que hacen de Internet.</p>
+ <p> 7.Tratar el tema del ciberbullying en clase.</p>
+  <p>8.Promover la comunicación entre padres y colegio.</p>
+  <p>9.Fortalecer su autoestima y autoconfianza.</p>
+  <p>10.Valorar sus cambios por muy pequeños que sean.</p>
   <div>
    <a href="dos.html">El cyberbullying</a>
   </div>
