--- a/dos.html
+++ b/dos.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>El cyberbullying escolar</h1>
-        <p>El cyberbullying escolar causa las siguientes daña la autoestima y la capacidad de los menores para relacionarse entre sí, y en casos extremos puede conducirlos a una depresión.</p>
+        <p>El cyberbullying escolar causa las siguientes cosas:daña la autoestima y la capacidad de los menores para relacionarse entre sí, y en casos extremos puede conducirlos a una depresión.</p>
         <div>
              <a href="index.html">Volver</a>
         </div>
