--- a/dos.html
+++ b/dos.html
@@ -6,7 +6,24 @@
     </head>
     <body>
         <h1>El cyberbullying escolar</h1>
+        <h2>Causas</h2>
         <p>El cyberbullying escolar causa las siguientes cosas:daña la autoestima y la capacidad de los menores para relacionarse entre sí, y en casos extremos puede conducirlos a una depresión.</p>
+       <h2>Características de los agresores</h2>
+        <p>- Personalidad irritable y agresiva.</p>
+        <p>- Bajo autocontrol.</p>
+        <p>- Ausencia de empatía.</p>
+        <p>- Tendencia a las conductas violentas y amenazantes.</p>
+        <p>- Impulsivo.</p>
+        <p>- Su rendimiento académico suele ser bajo. En ocasiones es algo mayor que el resto de la clase por haber repetido uno o varios cursos.</p>
+        <p>- Su comportamiento en el aula se caracteriza por las salidas de tono, las bromas fuera de lugar e incluso actitudes desafiantes frente a profesores y compañeros.</p>
+        <p>- Es posible que pertenezca a una familia desestructurada, con antecedentes de violencia doméstica.</p>
+        <p>- Físicamente fuerte.</p>
+        <p>- Asume el rol de líder ante un grupo de alumnos de características psicológicas parecidas o que buscan reconocimiento e integración en el grupo.</p>
+       <h2>Características de las víctimas</h2>
+       <p>· Sufrir alguna discapacidad física o psíquica.</p>
+       <p>· Tener algún tipo de trastorno del aprendizaje, especialmente los problemas relacionados con el lenguaje oral porque son muy evidentes y fácil objeto de burlas.</p>
+       <p>· Haber padecido acoso escolar con anterioridad.</p>
+       <p>· Pertenecer a un grupo étnico, religioso, cultural o de orientación sexual minoritario.</p>
         <div>
              <a href="index.html">Volver</a>
         </div>
