--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>El Cyberbullying Escolar</h1>
   <p>El cyberbullying escolar significa la persuasion física y/o psicológica a través de las redes que realiza un estudiante contra otro de forma negativa, continua e intencionada.</p>
-   Se puede evitar:   
+   <h2>Se puede evitar</h2>  
   <p>1.Motivar a los alumnos para que denuncien casos de ciberacoso. Fomentando la reflexión y haciéndoles ver que pueden ayudar a alguien.</p>
   <p>2.Tratar en el aula el tema del buen uso de Internet.</p>
   <p>3.Implementar programas de habilidades sociales, desarrollo personal y moral.</p>
