--- a/index.html
+++ b/index.html
@@ -21,5 +21,11 @@
   <div>
    <a href="dos.html">El cyberbullying</a>
   </div>
+  <table>
+    <tr>
+      <td>El acoso a edad temprana es posible detectarlo</td>
+      <td><img src="">image.png</td>
+    </tr>
+  </table>
 </body>
 </html>
