--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <table>
     <tr>
       <td>El acoso a edad temprana es posible detectarlo</td>
-      <td><img src="">image.png</td>
+      <td><img src="SSU6VJLEDVHMBBHWTGLJAABXKE.avif"></td>
     </tr>
   </table>
 </body>
